--- a/AngularTutorialwithCore/AngularTutorialwithCore.csproj
+++ b/AngularTutorialwithCore/AngularTutorialwithCore.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngularJS.Intellisense" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
   </ItemGroup>
